frontend/tests/cases/positive/wildcard.gr
foo : Int -> Int
foo 0 = 1;
foo _ = 0
