frontend/tests/cases/negative/noConsumption.gr
data Bool = True ; False

and : Bool [1] -> Bool [1] -> Bool
and [_] [_] = False
